--- a/Assignment 3/Zheng_fz114_assignment3.Rmd
+++ b/Assignment 3/Zheng_fz114_assignment3.Rmd
@@ -36,104 +36,137 @@ master_t <- Master %>%
   as_tibble() %>%
   select(birthYear, nameFirst) %>%
   group_by(birthYear, nameFirst) %>%
-  summarize(n = n()) %>%
-  mutate(prop = n / sum(n)) %>%
-  arrange(birthYear, desc(n))
-master_t
+  summarize(n = n()) %>% # compute the number of people with same first name
+  mutate(prop = n / sum(n)) %>% # compute proportion
+  ungroup() %>% 
+  arrange(birthYear, desc(n)) # sort the result first by birthYear then by n in descending order
+
+master_t # show the result
 ```
 
 ## (2) Create a subset of the tibble created in (1) with first names that start with the letter "Y".
 
 ```{r}
 nameStartedWithY <- master_t %>%
-  filter(str_starts(nameFirst, "Y"))
+  filter(str_starts(nameFirst, "Y")) # filter rows which first name starts with the letter Y
 
-nameStartedWithY
+nameStartedWithY # show the result
 ```
 
 ## (3) Create a subset of the tibble created in (1) with first names that contain at least three vowels.
 
 ```{r}
 nameContainsThreeVowels <- master_t %>%
-  filter(str_count(nameFirst, "[aeiou]") >= 3)
-nameContainsThreeVowels
+  filter(str_count(nameFirst, "[aeiou]") >= 3) # filter rows which first name contains three vowels
+
+nameContainsThreeVowels # show the result
 ```
 
 ## (4) In the Master dataframe, let us check whether the variable *birthYear* is consistent with the year in *birthDate*. Use a function in the *lubridate* package to extract the year from the *birthDate*. Call this variable *birthYear2*. In how many cases does *birthYear* have an "NA" entry? In how many cases does *birthYear2* have "NA" entry? In how many cases do both have "NA" entries? If you ignore all the cases with at least one "NA" entry (either in the *birthYear* or *birthYear2* variable), do all remaining cases match?
 
+### Create *birthYear2* by extracting year from *birthDate*
+
 ```{r}
 masterWithBirthYear2 <- Master %>%
   as_tibble() %>%
-  mutate(birthYear2 = year(birthDate))
+  mutate(birthYear2 = year(birthDate)) # create birthYear2 variable which stores the extracted year from birthDate
+
+masterWithBirthYear2 # show the result
 ```
+
+### Count rows which *birthYear* is "NA"
 
 ```{r}
 birthYearNA <- masterWithBirthYear2 %>%
-  filter(is.na(birthYear)) %>%
-  nrow()
-birthYearNA
+  filter(is.na(birthYear)) %>% # filter rows which birthYear is NA
+  nrow() # count total rows
+
+print(paste("There are ", birthYearNA, " cases which birthYear is NA.", sep = "")) # show the result
 ```
+
+### Count rows which *birthYear2* is "NA"
 
 ```{r}
 birthYear2NA <- masterWithBirthYear2 %>%
-  filter(is.na(birthYear2)) %>%
-  nrow()
-birthYear2NA
+  filter(is.na(birthYear2)) %>% # filter rows which birthYear2 is NA
+  nrow() # count total rows
+  
+print(paste("There are ", birthYear2NA, " cases which birthYear2 is NA.", sep = "")) # show the result
 ```
+
+### Count rows which *birthYear* and *birthYear2* are both "NA"
 
 ```{r}
 birthYearBothNA <- masterWithBirthYear2 %>%
-  filter(is.na(birthYear) & is.na(birthYear2)) %>%
-  nrow()
-birthYearBothNA
+  filter(is.na(birthYear) & is.na(birthYear2)) %>% # filter rows which birthYear and birthYear2 are both NA
+  nrow() # count total rows
+
+print(paste("There are ", birthYearBothNA, " cases which birthYear and birthYear2 are both NA.", sep = "")) # show the result
 ```
 
-```{r}
-masterWithBirthYear2 %>%
-  filter(!is.na(birthYear) & !is.na(birthYear2)) %>%
-  nrow()
+### Ignore all the cases with at least one "NA" entry and indicate how many cases have matched *birthYear* and *birthYear2*
 
-masterWithBirthYear2 %>%
-  filter(!is.na(birthYear) & !is.na(birthYear2) & birthYear == birthYear2) %>%
-  nrow()
+```{r}
+casesWithoutNA <- masterWithBirthYear2 %>%
+  filter(!is.na(birthYear) & !is.na(birthYear2)) %>% # filter rows which birthYear and birthYear2 are both not NA
+  nrow() # count total rows
+
+print(paste("There are ", casesWithoutNA, " cases which birthYear and birthYear2 are both not NA.", sep = "")) # show the result
+
+matchedCases <- masterWithBirthYear2 %>%
+  filter(!is.na(birthYear) & !is.na(birthYear2) & birthYear == birthYear2) %>% # filter rows which birthYear and birthYear2 are both not NA and are equal to each other
+  nrow() # count total rows
+
+print(paste("There are ", casesWithoutNA, " cases which birthYear and birthYear2 are both not NA and are equal to each other.", sep = "")) # show the result
+
+if(casesWithoutNA == matchedCases){
+  print("All the remaining cases match.")
+} else{
+  print("There exists some unmatched cases in the remainin cases.")
+}
 ```
 
 ## (5) Create a data frame of players showing just the playerID, first name, last name, given name, and career total (meaning, summed over all the years and all stints) of games (that is, the G variable) according to the Fielding data frame. [Hint: Join the Fielding data frame with the Master data frame]
 
 ```{r}
-
 playerCareer <- inner_join(Master, Fielding, by = "playerID") %>%
   group_by(playerID) %>%
-  summarize(playerID, nameFirst, nameLast, nameGiven, careerTotal = sum(G)) %>%
+  summarize(playerID, nameFirst, nameLast, nameGiven, careerTotal = sum(G)) %>% # compute the career total
   ungroup() %>%
-  distinct()
+  distinct() # clear redundant rows
 
-playerCareer
+playerCareer # show the result
 ```
 
 ## (6) Add a variable to your data frame obtained in (3) for full name by combining the first name and last name with a space between them.
 
 ```{r}
-nameContainsThreeVowels
+Master %>%
+  as_tibble() %>%
+  mutate(fullName = paste(nameFirst, nameLast, sep = " ")) %>% # add the variable fullName by combining the first name and last name with a space between them
+  select(birthYear, nameFirst, fullName) %>%
+  arrange(birthYear, nameFirst) %>%
+  inner_join(nameContainsThreeVowels, by = c("birthYear" = "birthYear", "nameFirst" = "nameFirst")) # inner join with data frame from (3) to get the n and prop variable
 ```
 
 ## (7) Using the data frames you have created, or starting from scratch, determine the five most popular first names in baseball among players who played at least 500 games. Plot the number of players with these five most popular first names over time (according to the birth year) with lines in a single plot. Be sure to make the plot look nice by using a title and changing the axis labels if necessary.
 
 ```{r}
 top5PopularFirstName <- playerCareer %>%
-  filter(careerTotal >= 500) %>%
+  filter(careerTotal >= 500) %>% # filter rows which careerTotal is larger than 500
   group_by(nameFirst) %>%
-  summarize(n = n()) %>%
-  arrange(desc(n)) %>%
-  head(5)
+  summarize(n = n()) %>% # count first name
+  arrange(desc(n)) %>% # sort by n in descending order
+  head(5) # get top 5 first names
 
-top5PopularFirstName
+top5PopularFirstName # show the result
 
-inner_join(Master, top5PopularFirstName, by = "nameFirst") %>%
+inner_join(Master, top5PopularFirstName, by = "nameFirst") %>% # use inner join to get rows which has the five most popular first name
   group_by(nameFirst, birthYear) %>%
-  summarize(n = n()) %>%
+  summarize(n = n()) %>% # compute number of players over year
+  na.omit(birthYear) %>%
   ggplot(aes(x = birthYear, y = n, color = nameFirst)) + 
-  geom_line() + 
+  geom_line() + # line plot
   labs(
     x = "Year",
     y = "Number of Players",
