--- a/Assignment 6/Zheng_fz114_assignment6.Rmd
+++ b/Assignment 6/Zheng_fz114_assignment6.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Assignment 5"
+title: "Assignment 6"
 author: "Feiyu Zheng (fz114)"
 date: "2022/2/21"
 output:
@@ -47,14 +47,14 @@ gutenberg_metadata %>%
 ### Download Treasure Island text
 
 ```{r}
-treasureIslandText <- gutenberg_download(120)
+treasureIslandText <- gutenberg_download(120, mirror = "http://mirrors.xmission.com/gutenberg/")
 treasureIslandText
 ```
 
 ### Download Kidnapped Text
 
 ```{r}
-kidnappedText <- gutenberg_download(421)
+kidnappedText <- gutenberg_download(421, mirror = "http://mirrors.xmission.com/gutenberg/")
 kidnappedText
 ```
 
@@ -104,7 +104,7 @@ top10KidnappedWords %>%
   theme(plot.title = element_text(hjust = 0.5))
 ```
 
-## 4. 
+## 4.
 
 ### (i) Create a visualization on the similarity/dissimilarity between the proportions of the non stop words (i.e., words that are not stop words) in the two books, and calculate the correlation between them.
 
@@ -268,7 +268,7 @@ ap_topics <- tidy(ap_lda)
 ap_topics
 ```
 
-## List the top 10 terms in each of the three topics in the fitted model
+### List the top 10 terms in each of the three topics in the fitted model
 
 ```{r}
 ap_topics %>%
