--- a/Assignment 8/Zheng_fz114_assignment8.Rmd
+++ b/Assignment 8/Zheng_fz114_assignment8.Rmd
@@ -21,6 +21,17 @@ library(rvest)
 library(httr)
 library(curl)
 library(jsonlite)
+library(modelr)
+library(ggbeeswarm)
+library(magrittr)
+library(igraph)
+library(sna)
+library(GGally)
+library(intergraph)
+library(choroplethr)
+library(choroplethrMaps)
+library(stringi)
+library(tidycensus)
 
 # suppress the warning message of dplyr
 options(dplyr.summarise.inform = F)
@@ -32,52 +43,579 @@ options(dplyr.summarise.inform = F)
 
 ## 1. Fit a separate linear model of `log10(gdpPercap)` on year for each country.
 
+### Import *gapminder* package
+
+```{r}
+library(gapminder)
+```
+
+### Generate the nested data by country and continent.
+
+```{r}
+gap_nested <- gapminder %>%
+  group_by(country, continent) %>%
+  nest()
+gap_nested
+```
+
+### Fit a linear model on each country
+
+```{r}
+gap_nested_lm <- gap_nested %>%
+  mutate(model = map(data, ~lm(log10(gdpPercap) ~ year, data = .)))
+gap_nested_lm
+```
+
 ## 2. Plot residuals against time, showing separate lines for each country in the same plot. Also, do this separately for each continent.
+
+### Compute and add the residuals to the tibble
+
+```{r}
+gap_nested_lm_resid <- gap_nested_lm %>%
+  mutate(resid = map2(data, model, add_residuals)) %>%
+  unnest(resid)
+gap_nested_lm_resid
+```
+
+### Residuals graph for each country
+
+```{r}
+gap_nested_lm_resid %>%
+  ggplot(aes(year, resid)) +
+  geom_line(alpha = 1/3, aes(group = country)) +
+  geom_smooth(color = "blue") +
+  labs(
+    title = "Residual Graph for Each Country"
+  ) +
+  theme(plot.title = element_text(hjust = 0.5))
+```
+
+### Residuals graph for each continent
+
+```{r}
+gap_nested_lm_resid %>%
+  ggplot(aes(year, resid)) +
+  geom_line(alpha = 1/3, aes(group = country)) +
+  geom_smooth(color = "blue") +
+  facet_wrap(~continent) +
+  labs(
+    title = "Residual Graph for Each Continent"
+  ) +
+  theme(plot.title = element_text(hjust = 0.5))
+```
 
 ## 3. Create a continent-wise Beeswarmplot for
 
 ### (i) value of the estimated slope coefficient
 
+```{r}
+gap_nested_lm_tidy <- gap_nested_lm %>%
+  mutate(tidy = map(model, tidy))
+
+gap_nested_lm_tidy %>%
+  mutate(tidy = map(tidy, ~filter(., term == "year"))) %>%
+  unnest(tidy) %>%
+  ggplot(aes(continent, estimate)) +
+  geom_boxplot() +
+  geom_beeswarm() +
+  labs(
+    title = "Continent-wise Beeswarmplot for Slope Coefficient Value"
+  ) +
+  theme(plot.title = element_text(hjust = 0.5))
+```
+
 ### (ii) value of the t-statistic (ratio of estimate and standard error). [Hint: you may need to revisit the materials on broom package]. Interpret the plots.
+
+```{r}
+gap_nested_lm_tidy %>%
+  mutate(tidy = map(tidy, ~filter(., term == "year"))) %>%
+  unnest(tidy) %>%
+  ggplot(aes(continent, statistic)) +
+  geom_boxplot() +
+  geom_beeswarm() +
+  labs(
+    title = "Continent-wise Beeswarmplot for t-statistic Value"
+  ) +
+  theme(plot.title = element_text(hjust = 0.5))
+```
+
+According to the graph, we can see that
 
 ## 4. Identify the countries that have estimated negative slopes and p-values less than 0.05. What is the interpretation of the linear model fit for these countries?
 
-## 5. Plot the year-wise `log10(gdpPercap)` for the countries identified in step 1.
+```{r}
+negativeCountries <- gap_nested_lm_tidy %>%
+  mutate(tidy = map(tidy, ~filter(., term == "year"))) %>%
+  unnest(tidy) %>%
+  filter(estimate < 0 & p.value < 0.05) %>%
+  ungroup() %>%
+  select(country, estimate, p.value)
+negativeCountries
+```
+
+## 5. Plot the year-wise `log10(gdpPercap)` for the countries identified in step 4.
+
+```{r}
+gapminder %>%
+  filter(country %in% negativeCountries$country) %>%
+  group_by(country, continent) %>%
+  ggplot(aes(x = year, y = log10(gdpPercap), color = country)) +
+  geom_line()
+```
 
 # Problem 2
 
-## In the lecture, we discussed fitting of a linear model of mpg versus wt from the mtcars data and demonstrated evaluation of its out-of-sample performance with a k-fold cross validation. Repeat this analysis for a non-linear model mpg \~ $\frac{k}{w}t+b$ , where k and b are model parameters and compare its performance with the linear model using an 8-fold cross validation.
+## In the lecture, we discussed fitting of a linear model of *mpg* versus *wt* from the mtcars data and demonstrated evaluation of its out-of-sample performance with a k-fold cross validation. Repeat this analysis for a non-linear model mpg \~ $\frac{k}{wt}+b$ , where k and b are model parameters and compare its performance with the linear model using an 8-fold cross validation.
+
+### Set 8-fold cross validation
+
+```{r}
+mtcars_cv <- mtcars %>%
+  crossv_kfold(k = 8)
+mtcars_cv
+```
+
+### Define linear model mpg \~ wt
+
+```{r}
+mtcars_lm <- mtcars %>%
+  lm(mpg ~ wt, .)
+mtcars_lm
+```
+
+### Define non-linear model mpg \~ $\frac{k}{wt} + b$
+
+```{r}
+mtcars_nls <- mtcars %>%
+  nls(mpg ~ k / wt + b, ., start = list(k = 1, b = 0))
+mtcars_nls
+```
+
+### Compute RSME for both model
+
+```{r}
+lm_rmse_mean <- mtcars_cv %>%
+  mutate(lm = map(train, ~lm(mpg ~ wt, data = .))) %$%
+  map2_dbl(lm, test, rmse) %>%
+  mean()
+
+nls_rmse_mean <- mtcars_cv %>%
+  mutate(
+    nls = map(train, ~nls(mpg ~ k/wt+b, data = .[[1]], start = list(k = 1, b = 0)))
+  ) %$%
+  map2_dbl(nls, test, rmse) %>%
+  mean()
+
+print(paste("Linear model RSME mean: ", lm_rmse_mean, sep = ''))
+print(paste('Non-linear model RSME mean: ', nls_rmse_mean, sep = ''))
+```
+
+Comparing the mean RSME of both models, we can see that linear model's mean RSME is less than non-linear model's one. This means that the linear model fits the performance of the linear model is better than non-linear model.
 
 # Problem 3
 
-## 1. Download the data frames "Dataset1-Media-Example-NODES.csv" and "Dataset1-Media-Example-EDGSE.csv" from <https://kateto.net/network-visualization>, and create an igraph network object.
+## 1. Download the data frames "Dataset1-Media-Example-NODES.csv" and "Dataset1-Media-Example-EDGES.csv" from <https://kateto.net/network-visualization>, and create an igraph network object.
+
+### Read nodes file and convert to tibble
+
+```{r}
+nodes <- read.csv(
+  "Dataset1-Media-Example-NODES.csv",
+  header = T,
+  as.is = T
+) %>%
+  as_tibble()
+nodes
+```
+
+### Read edges files and convert to tibble
+
+```{r}
+links <- read.csv(
+  "Dataset1-Media-Example-EDGES.csv",
+  header = T,
+  as.is = T
+) %>%
+  as_tibble()
+links
+```
+
+### Create the igraph object
+
+```{r}
+net_igraph <- graph_from_data_frame(d = links, vertices = nodes, directed = T)
+net_igraph
+```
+
+### Plot the graph
+
+```{r}
+plot(net_igraph)
+```
 
 ## 2. Convert the igraph to a network object in the sna package
 
+```{r}
+net_network <- asNetwork(net_igraph)
+net_network
+```
+
 ## 3. Plot the network using separate colors for the nodes based on the vertex attribute media.type and make the size of the nodes proportional to the vertex attribute audience.size. [Hint: Use network:;get.vertex.attribute]
+
+```{r warning=FALSE}
+net_network %>%
+  ggnet2(size = "audience.size", color = "media.type", label = T)
+```
 
 ## 4. Calculate the mean degree and density of the network using appropriate functions in the sna package.
 
+### Mean degree
+
+```{r}
+net_network %>%
+  degree(gmode = "graph") %>%
+  mean()
+```
+
+### Density
+
+```{r}
+net_network %>%
+  network.density()
+```
+
 # Problem 4
 
-## Scrape the country-wise population data from <https://www.worldometers.info/world-population/population-by-country/>. Plot the population density ($P/Km^2$) obtained from this table on a country-wise choropleth map. Make sure to 
+## Scrape the country-wise population data from <https://www.worldometers.info/world-population/population-by-country/>. Plot the population density ($P/Km^2$) obtained from this table on a country-wise choropleth map. Make sure to
 
 ### 1. Clean the data to make it compatible with the country-wise world choropleth map
 
+#### Scrape the data
+
+```{r}
+url <- "https://www.worldometers.info/world-population/population-by-country/"
+country_population <- url %>%
+  read_html() %>%
+  html_nodes("table") %>%
+  html_table(fill = TRUE) %>%
+  .[[1]]
+country_population
+```
+
+#### Clean the data
+
+```{r warning=FALSE}
+country_population <- country_population %>%
+  rename(
+    `Density (P/Km2)` = `Density (P/Km²)`,
+    `Land Area (Km2)` = `Land Area (Km²)`
+  ) %>%
+  mutate(
+    `Country (or dependency)` = tolower(`Country (or dependency)`),
+    `Population (2020)` = as.integer(
+      str_replace_all(.$`Population (2020)`, ",", "")
+    ),
+    `Yearly Change` = as.double(
+      str_replace_all(.$`Yearly Change`, " %", "")
+    ),
+    `Net Change` = as.integer(
+      str_replace_all(.$`Net Change`, ',', '')
+    ),
+    `Density (P/Km2)` = as.integer(
+      str_replace_all(.$`Density (P/Km2)`, ',', '')
+    ),
+    `Land Area (Km2)` = as.integer(
+      str_replace_all(.$`Land Area (Km2)`, ',', '')
+    ),
+    `Migrants (net)` = as.integer(
+      str_replace_all(.$`Migrants (net)`, ',', '')
+    ),
+    `Fert. Rate` = as.double(`Fert. Rate`),
+    `Med. Age` = as.integer(`Med. Age`),
+    `Urban Pop %` = as.integer(
+      str_replace_all(.$`Urban Pop %`, ' %', '')
+    ),
+    `World Share` = as.double(
+      str_replace_all(.$`World Share`, ' %', '')
+    )
+  )
+
+country_population
+```
+
 ### 2. Maximize the overlap between the two data frames (the one obtained from the scraped data and the choropleth country data frame), i.e., if a country appears in both data frames, possibly with different names, it must be plotted
+
+### Maximize the overlap
+
+```{r}
+country_population <- country_population %>%
+  mutate(
+    `Country (or dependency)` = case_when(
+      `Country (or dependency)` == "united states" ~ "united states of america",
+      `Country (or dependency)` == 'serbia' ~ 'republic of serbia',
+      `Country (or dependency)` == 'tanzania' ~ 'united republic of tanzania',
+      `Country (or dependency)` == 'north macedonia' ~ 'macedonia',
+      `Country (or dependency)` == 'bahamas' ~ 'the bahamas',
+      `Country (or dependency)` == 'timor-leste' ~ 'east timor',
+      str_detect(`Country (or dependency)`, "ivoire") ~ 'ivory coast',
+      `Country (or dependency)` == 'dr congo' ~ 'democratic republic of the congo',
+      `Country (or dependency)` == 'congo' ~ 'republic of congo',
+      `Country (or dependency)` == 'czech republic (czechia)' ~ 'czech republic',
+      `Country (or dependency)` == 'guinea-bissau' ~ 'guinea bissau',
+      T ~ `Country (or dependency)`
+    )
+  )
+```
 
 ### 3. List the countries, if any, in the scraped data frame that do not appear in the choropleth country data frame (after appropriate cleaning)
 
+```{r}
+setdiff(
+  country.regions$region,
+  country_population$`Country (or dependency)`
+) %>%
+  as_tibble_col(column_name = "region")
+```
+
 ### 4. List the countries, if any, in the choropleth country data frame that do not appear in the scraped data frame (after appropriate clearning)
+
+```{r}
+setdiff(
+  country_population$`Country (or dependency)`,
+  country.regions$region
+) %>%
+  as_tibble_col(column_name = "region")
+```
+
+### Plot the map
+
+```{r warning=FALSE}
+country_population %>%
+  mutate(region = `Country (or dependency)`, value = `Density (P/Km2)`) %>%
+  country_choropleth(title = 'World Population Density Map', num_colors = 9) +
+  theme(plot.title = element_text(hjust = 0.5))
+```
 
 # Problem 5
 
-## Obtain 2015-2019 5-year aggregated ACS tract-wise data on NJ median household income and rental. Combine them into a single data frame.
+## Obtain 2016-2020 5-year aggregated ACS tract-wise data on NJ median household income and rental. Combine them into a single data frame.
 
 ### 1. Plot the tract-wise rental against the median household income and comment.
 
+#### Set API key
+
+```{r}
+census_api_key("44ed2f559fc8ff1593dc792e28e54bd655f7f900", install = T, overwrite = T)
+```
+
+#### Obtain the data and combine both income and rental to one tibble
+
+```{r}
+nj_median_household_income_and_rental <- get_acs(
+  geography = "tract",
+  variables = c(medincome = "B19013_001", medrental = "B25064_001"),
+  state = "NJ",
+  year = 2020,
+  geometry = T
+) %>%
+  as_tibble() %>%
+  pivot_wider(
+    names_from = variable,
+    values_from = c(estimate, moe)
+  )
+nj_median_household_income_and_rental
+```
+
+#### Import two library to help draw the graph
+
+```{r}
+library(biscale)
+library(cowplot)
+```
+
+#### Define the bi-class
+
+```{r warning=FALSE}
+nj_median_household_income_and_rental <- nj_median_household_income_and_rental %>%
+  bi_class(
+    x = estimate_medincome,
+    y = estimate_medrental,
+    style = "quantile",
+    dim = 3
+  )
+nj_median_household_income_and_rental
+```
+
+#### Create the map
+
+```{r}
+map <- nj_median_household_income_and_rental %>%
+  ggplot() +
+  geom_sf(
+    aes(fill = bi_class, geometry = geometry),
+    color = "white",
+    size = 0.1,
+    show.legend = F
+  ) + 
+  bi_scale_fill(pal = "DkBlue", dim = 3) +
+  labs(
+    x = NULL,
+    y = NULL,
+    title = "Tract-wise NJ Median Household Income Against Median Household Rental"
+  ) +
+  # theme_void() +
+  theme(
+    plot.title = element_text(hjust = 0.5)
+  )
+map
+```
+
+#### Create the legend
+
+```{r}
+legend <- bi_legend(
+  pal = "DkBlue",
+  dim = 3,
+  xlab = "Median income",
+  ylab = "Median rental",
+  size = 8
+)
+legend
+```
+
+#### Combine the map with the legend to get the final plot
+
+```{r}
+ggdraw() +
+  draw_plot(map, 0, 0, 1, 1) +
+  draw_plot(legend, 0.7, 0.15, 0.3, 0.3)
+```
+
+Based on the above graph, most counties in the center Jersey and north Jersey are blue which means that people in these areas have a high income. Meanwhile, some counties in the south Jersey are in purple which means that people lived there may have a relatively high rental.
+
 ### 2. Fit a linear regression equation of rental against median household income and report the summary.
+
+#### Fit a linear model to the data and show the summary of the model
+
+```{r}
+lm <- nj_median_household_income_and_rental %>%
+  lm(estimate_medrental ~ estimate_medincome, .)
+lm %>%
+  tidy() %>%
+  unnest()
+lm %>%
+  glance
+```
+
+#### Visualize the linear model
+
+```{r}
+nj_median_household_income_and_rental %>%
+  add_predictions(lm) %>%
+  ggplot() +
+  geom_point(aes(estimate_medincome, estimate_medrental)) +
+  geom_line(aes(estimate_medincome, pred), color = 'red')
+```
 
 ### 3. Looking at the plot, suggest ways to improve the model fit. Fit the improved model and report the R2.
 
-### 4. Obtain the rental data for year=2019 (5-year aggregate from 2015-2019) and year=2014 (5-year aggregate from 2010-2014), and plot the percentage changes for each country in a column or bar diagram, in increasing or decreasing order of percentage increase.
+#### Fit a log10 model to the data and show the summary of the model
+
+```{r}
+nls <- nj_median_household_income_and_rental %>%
+  lm(
+    estimate_medrental ~ log(estimate_medincome, 100),
+    .,
+    # start = list(a = 1, b = 1, c = 1)
+  )
+nls %>%
+  tidy %>%
+  unnest()
+nls %>%
+  glance
+```
+
+```{r}
+nj_median_household_income_and_rental %>%
+  add_predictions(nls) %>%
+  ggplot() +
+  geom_point(aes(estimate_medincome, estimate_medrental)) +
+  geom_line(aes(estimate_medincome, pred), color = 'red')
+```
+
+### 4. Obtain the rental data for year=2020 (5-year aggregate from 2016-2020) and year=2015 (5-year aggregate from 2011-2015), and plot the percentage changes for each county in a column or bar diagram, in increasing or decreasing order of percentage increase.
+
+#### Get the rental data from 2011-2015
+
+```{r}
+nj_median_rental_2011_2015 <- get_acs(
+  geograph = "county",
+  variables = c(medrental = "B25064_001"),
+  state = "NJ",
+  year = 2015,
+  geometry = T
+) %>%
+  as_tibble() %>%
+  rename(
+    `2011-2015 Rental` = estimate
+  )
+nj_median_rental_2011_2015
+```
+
+#### Get the rental data from 2016-2020
+
+```{r}
+nj_median_rental_2016_2020 <- get_acs(
+  geograph = "county",
+  variables = c(medrental = "B25064_001"),
+  state = "NJ",
+  year = 2020,
+  geometry = T
+) %>%
+  as_tibble() %>%
+  rename(
+    `2016-2020 Rental` = estimate
+  )
+nj_median_rental_2016_2020
+```
+
+#### Combine two data sets and compute the percentage change
+
+```{r}
+nj_median_rental <- inner_join(
+  nj_median_rental_2011_2015,
+  nj_median_rental_2016_2020,
+  by = "GEOID"
+) %>%
+  mutate(
+    `Percentage Change` = (`2016-2020 Rental` - `2011-2015 Rental`)/`2011-2015 Rental`,
+    County = str_match(NAME.x, "(?<county>\\S*) County*")[, "county"]
+  ) %>%
+  select(
+    County,
+    `2011-2015 Rental`,
+    `2016-2020 Rental`,
+    `Percentage Change`
+  )
+nj_median_rental
+```
+
+#### Plot the graph
+
+```{r}
+
+nj_median_rental %>%
+  ggplot(
+    aes(
+      x = reorder(County, -`Percentage Change`),
+      y = `Percentage Change`
+    )
+  ) +
+  geom_bar(stat = "identity") +
+  labs(
+    x = "County",
+    y = "Percentage Change",
+    title = "The Percentage Change of Each County between 2011-2015 to 2016-2020"
+  ) +
+  theme(plot.title = element_text(hjust = 0.5))
+```
